--- a/logireg_practice.ipynb
+++ b/logireg_practice.ipynb
@@ -15,9 +15,31 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      Id  Pclass  Sex   Age  SibSp  Parch     Fare  Embarked\n",
+      "0      0       3    0  22.0      1      0   7.2500         1\n",
+      "1      1       1    1  38.0      1      0  71.2833         0\n",
+      "2      2       3    1  26.0      0      0   7.9250         1\n",
+      "3      3       1    1  35.0      1      0  53.1000         1\n",
+      "4      4       3    0  35.0      0      0   8.0500         1\n",
+      "..   ...     ...  ...   ...    ...    ...      ...       ...\n",
+      "886  886       2    0  27.0      0      0  13.0000         1\n",
+      "887  887       1    1  19.0      0      0  30.0000         1\n",
+      "888  888       3    1  20.0      1      2  23.4500         1\n",
+      "889  889       1    0  26.0      0      0  30.0000         0\n",
+      "890  890       3    0  32.0      0      0   7.7500         2\n",
+      "\n",
+      "[891 rows x 8 columns]\n"
+     ]
+    }
+   ],
    "source": [
     "X_train = pd.read_csv(\"./logistic_regression_datasets/train_X.csv\")\n",
+    "print(X_train)\n",
     "y_train = pd.read_csv(\"./logistic_regression_datasets/train_Y.csv\")\n",
     "X_test = pd.read_csv(\"./logistic_regression_datasets/test_X.csv\")\n",
     "y_test = pd.read_csv(\"./logistic_regression_datasets/test_Y.csv\")"
@@ -148,7 +170,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 64-bit (windows store)",
+   "display_name": "Python 3.10.6 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -162,12 +184,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.6 (tags/v3.10.6:9c7b4bd, Aug  1 2022, 21:53:49) [MSC v.1932 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "f7a0a278dfefc79bfeb124637e86121a0eb73531a1347389b271435fabd9754a"
+    "hash": "1658d7c139ecb4375ab76a4a9bda7b71499aefd554bc284ea3c47687afb5394a"
    }
   }
  },
