--- a/neural_network.ipynb
+++ b/neural_network.ipynb
@@ -832,7 +832,7 @@
     "    else:\n",
     "        return 0.01\n",
     "def Linear_de(input):\n",
-    "    return 1q\n",
+    "    return 1\n",
     "def sigmoid_de(input):\n",
     "    return np.exp(input)/ np.square(np.exp(input) + 1)"
    ]
