--- a/neural_network.ipynb
+++ b/neural_network.ipynb
@@ -814,13 +814,15 @@
     "    return np.maximum(0.01 * input, input)\n",
     "def Linear(input):\n",
     "    return input\n",
-    "def sigmoid(input):\n",
-    "    return 1 / (1 + np.exp(-input))"
+    "def Sigmoid(input):\n",
+    "    return 1 / (1 + np.exp(-input))\n",
+    "def Swish(input):\n",
+    "    return input * Sigmoid(input)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -833,8 +835,10 @@
     "        return 0.01\n",
     "def Linear_de(input):\n",
     "    return 1\n",
-    "def sigmoid_de(input):\n",
-    "    return np.exp(input)/ np.square(np.exp(input) + 1)"
+    "def Sigmoid_de(input):\n",
+    "    return np.exp(input)/ np.square(np.exp(input) + 1)\n",
+    "def Swish_de(input):\n",
+    "    return Swish(input) + Sigmoid(input)*(1 - Swish(input))"
    ]
   },
   {
@@ -855,7 +859,7 @@
    "outputs": [],
    "source": [
     "class Neural_Network:\n",
-    "    def __init__(self, n_inputs, n1_hiddennodes, n2_hiddennodes, n_outputs):\n",
+    "    def __init__(self, n_inputs, n_outputs, n_hiddenlayers):\n",
     "        self.weight1 = 0.1 * np.random.randn(n_inputs, n1_hiddennodes)\n",
     "        self.weight2 = 0.1 * np.random.randn(n1_hiddennodes, n2_hiddennodes)\n",
     "        self.weight3 = 0.1 * np.random.randn(n2_hiddennodes, n_outputs)\n",
