finished neural network forward pass

--- a/sample2.ipynb
+++ b/sample2.ipynb
@@ -2,51 +2,42 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def summa(a, b):\n",
-    "    return a + b\n",
-    "    "
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def func(num1, num2, func2):\n",
-    "    if (func2.__name__ == \"summa\"):\n",
-    "        print(0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "var = summa"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9\n"
+      "[[1 2 3]\n",
+      " [4 5 6]] [[10 10 10]]\n",
+      "[[11 12 13]\n",
+      " [14 15 16]]\n"
      ]
     }
    ],
    "source": [
-    "print(var(4, 5))"
+    "a = np.array([[1,2,3],[4,5,6]])\n",
+    "b = np.array([[10,10, 10]])\n",
+    "print(a, b)\n",
+    "print(a + b)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
