completed neural netowork 1.0

--- a/neural_network.ipynb
+++ b/neural_network.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,40 +243,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = Neural_Network([X_train.shape[1], 50, 30,  2], hiddenlayers_actfunc = leaky_ReLU)\n",
+    "model = Neural_Network([X_train.shape[1], 50, 40, 30,  Y_train.shape[1]], hiddenlayers_actfunc = leaky_ReLU)\n",
     "for i in range (len(X_chunks)):\n",
-    "    model.fit(X_chunks[i], Y_chunks[i], learning_rate=0.001, epochs=50000)"
+    "    model.fit(X_chunks[i], Y_chunks[i], learning_rate=0.01, epochs=50000)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### SỬ DỤNG MODEL ĐỂ DỤ ĐOÁN VỚI TẬP DỮ LIỆU KIỂM TRA"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.06032094 0.0720162 ]\n",
-      " [0.05151799 0.061507  ]\n",
-      " [0.05749914 0.06864793]\n",
-      " [0.0563242  0.06724514]\n",
-      " [0.06874787 0.08207585]\n",
-      " [0.06086026 0.07265922]\n",
-      " [0.05598315 0.06683634]\n",
-      " [0.04514369 0.05389535]\n",
-      " [0.04421076 0.05278255]\n",
-      " [0.05131724 0.0612655 ]\n",
-      " [0.04694612 0.05604785]\n",
-      " [0.05184511 0.06189604]\n",
-      " [0.05108118 0.06098509]\n",
-      " [0.04618995 0.05514451]\n",
-      " [0.04827793 0.0576371 ]\n",
-      " [0.05777903 0.06898043]]\n"
+      "[[0.04852521 0.07496778]\n",
+      " [0.02995131 0.04247113]\n",
+      " [0.06342148 0.09926856]\n",
+      " [0.05043883 0.07707804]\n",
+      " [0.11076734 0.17989936]\n",
+      " [0.12100926 0.19888383]\n",
+      " [0.04009547 0.06059014]\n",
+      " [0.00977071 0.01100436]\n",
+      " [0.01265698 0.01457494]\n",
+      " [0.0968542  0.15711719]\n",
+      " [0.01187737 0.01390789]\n",
+      " [0.02201912 0.03082387]\n",
+      " [0.08456134 0.13655284]\n",
+      " [0.03831796 0.05742863]\n",
+      " [0.03222517 0.04734664]\n",
+      " [0.02840511 0.04111034]]\n"
      ]
     }
    ],
